feat: cambio de arquitectura beta